--- a/src/pug/layouts/header.pug
+++ b/src/pug/layouts/header.pug
@@ -1,5 +1,6 @@
 include mixins.pug
 header.header
-    .header__grid
-        p 123
-        p 123
+    .container
+        .header__grid
+            p 123
+            p 123
