--- a/src/scss/modules/_main.scss
+++ b/src/scss/modules/_main.scss
@@ -10,10 +10,13 @@
 	-webkit-box-direction: normal;
 	display: flex;
 	flex-direction: column;
+	min-height: 100%;
+
+}
+.container {
 	max-width: var(--container);
 	padding-left: var(--container-padding);
 	padding-right: var(--container-padding);
-	min-height: 100%;
 	margin: 0 auto;
 }
 .backdrop {
@@ -56,11 +59,7 @@
 		grid-template-columns: repeat(2, 1fr);
 		align-items: center;
 		width: 100%;
-		max-width: var(--container);
 		height: var(--header-grid-height);
-		margin: 0 auto;
-		padding-left: var(--container-padding);
-		padding-right: var(--container-padding);
 	}
 }
 
