--- a/src/scss/styles.css
+++ b/src/scss/styles.css
@@ -326,10 +326,13 @@ footer {
   position: relative;
   display: flex;
   flex-direction: column;
+  min-height: 100%;
+}
+
+.container {
   max-width: var(--container);
   padding-left: var(--container-padding);
   padding-right: var(--container-padding);
-  min-height: 100%;
   margin: 0 auto;
 }
 
@@ -372,11 +375,7 @@ footer {
   grid-template-columns: repeat(2, 1fr);
   align-items: center;
   width: 100%;
-  max-width: var(--container);
   height: var(--header-grid-height);
-  margin: 0 auto;
-  padding-left: var(--container-padding);
-  padding-right: var(--container-padding);
 }
 
 .footer {
