--- a/src/pug/layouts/svg.pug
+++ b/src/pug/layouts/svg.pug
@@ -1,18 +1,3 @@
 svg(xmlns='http://www.w3.org/2000/svg', style="display:none")
-    symbol#loop(viewBox='0 0 0.821796 0.821796')
-        circle(fill='none', stroke-width='0.0587039', stroke-linecap='round', stroke-linejoin='round', cx='0.381559', cy='0.381559', r='0.352206')
-        line(fill='none', stroke-width='0.0587039', stroke-linecap='round', stroke-linejoin='round', x1='0.631017', y1='0.631017', x2='0.792444', y2='0.792444')
-    symbol#pag-left(viewBox='0 0 0.0425541 0.0709229')
-        polyline(fill='none', stroke-width='0.0141854', stroke-linecap='round', stroke-linejoin='round', points='0.0354615,0.0638302 0.00709269,0.0354615 0.0354615,0.00709269 ')
-    symbol#pag-dleft(viewBox='0 0 0.257072 0.160644')
-        polyline(fill='none', stroke-width='0.0321306', stroke-linecap='round', stroke-linejoin='round', points='0.241007,0.144579 0.17675,0.080322 0.241007,0.0160653 ')
-        polyline(fill='none', stroke-width='0.0321306', stroke-linecap='round', stroke-linejoin='round', points='0.080322,0.144579 0.0160653,0.080322 0.080322,0.0160653 ')
-    symbol#pag-right(viewBox='0 0 0.043166 0.0719427')
-        polyline(fill='none', stroke-width='0.0143894', stroke-linecap='round', stroke-linejoin='round', points='0.00719468,0.064748 0.0359714,0.0359714 0.00719468,0.00719468 ')
-    symbol#pag-dright(viewBox='0 0 0.265605 0.165976')
-        polyline(fill='none', stroke-width='0.0331971', stroke-linecap='round', stroke-linejoin='round', points='0.0165986,0.149378 0.0829882,0.0829882 0.0165986,0.0165986 ')
-        polyline(fill='none', stroke-width='0.0331971', stroke-linecap='round', stroke-linejoin='round', points='0.182617,0.149378 0.249007,0.0829882 0.182617,0.0165986 ')
-    symbol#right-arr(viewBox="0 0 0.0279719 0.0489503")
-        polyline(fill='none', stroke-width='0.00699347', stroke-linecap='round', stroke-linejoin='round', points='0.00349674,0.0454536 0.0244752,0.0244752 0.00349674,0.00349674 ')
-    symbol#close(viewBox="0 0 0.0617378 0.0617378")
-        path(fill='none', stroke-width='0.00686019', stroke-linecap='round', stroke-linejoin='round', d='M0.00343009 0.00343009l0.0548776 0.0548776m0 -0.0548776l-0.0548776 0.0548776')
+    symbol#phone-icon(viewBox='0 0 14 14')
+        path(d="M13.4816 0.666977C13.6456 0.694321 13.755 0.776352 13.8644 0.885727C13.9464 1.02245 14.0011 1.15916 14.0011 1.29588C14.0011 3.59276 13.4269 5.72557 12.2785 7.69432C11.13 9.60838 9.62611 11.1396 7.71205 12.2607C5.7433 13.4092 3.61048 13.9834 1.31361 13.9834C1.14955 13.9834 1.01283 13.956 0.903452 13.8467C0.766733 13.7646 0.684702 13.6279 0.684702 13.4639L0.0284517 10.6201C-0.0262358 10.4834 0.00110792 10.3467 0.0831392 10.1826C0.137827 10.0459 0.247202 9.93651 0.411264 9.88182L3.47376 8.56932C3.58314 8.51463 3.71986 8.51463 3.85658 8.54198C3.9933 8.59666 4.13001 8.65135 4.23939 8.76073L5.57923 10.4014C6.64564 9.90916 7.60267 9.25291 8.42298 8.40526C9.2433 7.58495 9.92689 6.62791 10.4191 5.56151L8.77845 4.22166C8.66908 4.11229 8.58705 4.00291 8.5597 3.8662C8.50501 3.72948 8.53236 3.59276 8.58705 3.45604L9.89955 0.39354C9.95423 0.256821 10.0363 0.147446 10.2003 0.0654146C10.337 0.0107271 10.4738 -0.0166167 10.6378 0.0107271L13.4816 0.666977Z" fill="black")
