--- a/src/pug/layouts/head.pug
+++ b/src/pug/layouts/head.pug
@@ -18,6 +18,7 @@ html(lang="ru")
         include svg.pug
         block modal
         include ../components/backdrop.pug
+        include ../components/modal.pug
         .wrapper 
             block header
                 include header.pug
