--- a/src/pug/layouts/header.pug
+++ b/src/pug/layouts/header.pug
@@ -15,5 +15,5 @@ header.header
             a.header__phone(href="tel:74955272121")
                 +svg('phone-icon', 14)(class='phone-icon')
                 span +7 495 527 2121
-            button.header__callback 
+            button.header__callback.js-modal-open
                 span Заказать звонок
