--- a/src/scss/modules/_keyframes.scss
+++ b/src/scss/modules/_keyframes.scss
@@ -1,10 +1,35 @@
 
+
+@keyframes modalAnimation {
+	0% {
+		opacity: 0;
+		display: none;
+	}
+
+	100% {
+		opacity: 1;
+		display: block;
+	}
+}
+@keyframes modalAnimationClose {
+	0% {
+		opacity: 1;
+		display: block;
+	}
+
+	100% {
+		opacity: 0;
+		display: none;
+	}
+}
+
+
 @keyframes up {
 	from {
 		transform: translateY(0px);
 	}
 	to {
-		transform: translateY(-5px);
+		transform: translateY(-2px);
 	}
 }
 
@@ -13,7 +38,7 @@
 		transform: translateY(0px);
 	}
 	to {
-		transform: translateY(5px);
+		transform: translateY(2px);
 	}
 }
 
