--- a/src/scss/modules/_main.scss
+++ b/src/scss/modules/_main.scss
@@ -42,6 +42,100 @@
 	overflow: hidden !important;
 	padding-right: 17px;
 }
+.callback-modal {
+	position: fixed;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	width: 100%;
+	height: 100%;
+	padding: 80px 0;
+	background-color: #fff;
+	z-index: 50;
+	transition: $trans;
+	&:not(.is-open) { 
+		display: none;
+		animation: modalAnimationClose 0.3s ease-in-out 0s 1 normal forwards;
+	}
+	&.is-open { 
+		animation: modalAnimation 0.3s ease-in-out 0s 1 normal forwards;
+	}
+
+	&__close {
+		position: fixed;
+		top: 60px;
+		right: 60px;
+		@include breakpoint(xl) {
+			top: 50px;
+			right: 50px;
+		} 
+		@include breakpoint(lg) {
+			top: 40px;
+			right: 40px;
+		} 
+		@include breakpoint(md) {
+			top: 20px;
+			right: 20px;
+		} 
+	}
+	&__content {
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		flex-direction: column;
+		gap: 80px;
+		width: 100%;
+		height: 100%;
+		min-height: fit-content;
+		max-width: calc(var(--container-padding) * 2 + 587px);
+		margin: 0 auto;
+		padding-left: var(--container-padding);
+		padding-right: var(--container-padding);
+		overflow-y: auto;
+		@include breakpoint(xxl) {
+			gap: 50px;
+		}
+		@include breakpoint(md) {
+			gap: 30px;
+			align-items: start;
+		}
+	}
+	&__title {
+		font-size: 52px;
+		font-family: $r;
+		line-height: 120%;
+		text-transform: uppercase;
+		@include breakpoint(xxl) {
+			font-size: 40px;
+		}
+		@include breakpoint(xl) {
+			font-size: 28px;
+		}
+		@include breakpoint(md) {
+			padding-left: 15px;
+			font-size: 20px;
+		}
+	}
+	&__form {
+		display: flex;
+		flex-direction: column;
+		gap: 50px;
+		@include breakpoint(xxl) {
+			gap: 40px;
+		}
+		@include breakpoint(xl) {
+			gap: 45px;
+		}
+		@include breakpoint(md) {
+			gap: 40px;
+
+		}
+	}
+
+}
+
+
 
 
 .btn {
@@ -62,6 +156,12 @@
 		white-space: nowrap;
 		border-radius: 100px;
 		background-color: var(--main-color);
+		transition: $trans;
+		@media ( hover : hover ) {
+			&:hover {
+				background-color: var(--main-color-hover);
+			}
+		}
 		@include breakpoint(xxl) {
 			font-size: 13px;
 			padding: 12px 20px;
@@ -108,6 +208,8 @@
 			width: 38px;
 			height: 2px;
 			background-color: var(--main-color);
+			transform: translateY(0);
+			transition: $trans;
 			@include breakpoint(xxl) {
 				width: 32px;
 			}
@@ -135,10 +237,129 @@
 			display: none;
 		}
 	}
+	@media (hover : hover) {
+		&:hover & {
+			&__icon > span:first-child {
+				transform: translateY(-2px);
+			}
+			&__icon > span:last-child {
+				transform: translateY(2px);
+			}
+		}
+	}
 }
 .logo {
 	display: block;
 	width: fit-content;
+}
+.form {
+	width: 100%;
+	&__field {
+		position: relative;
+
+		> label {
+			position: absolute;
+			left: 0;
+			bottom: 0;
+			padding: 5px 16px 5px 0;
+			font-size: 17px;
+			line-height: 160%;
+			text-transform: uppercase;
+			pointer-events: none;
+			transform-origin: 0 0;
+			transition: opacity .1s ease-in-out, transform .1s ease-in-out;
+		}
+	}
+	&__input {
+		display: block;
+		width: 100%;
+		height: 50px;
+		padding: 5px 16px 5px 0;
+		font-size: 16px;
+		font-weight: 400;
+		line-height: 160%;
+		color: #000;
+		background-color: #fff;
+		background-clip: padding-box;
+		outline: none;
+		border: none;
+		border-bottom: 1px solid rgb(0 0 0 / 20%);
+		-webkit-appearance: none;
+		-moz-appearance: none;
+		appearance: none;
+		border-radius: 0;
+		transition: $trans;
+
+		&::placeholder { opacity: 0;}
+		@media ( hover : hover ) {
+			&:hover {
+				border-bottom: 1px solid rgb(0 0 0 / 80%);
+			}
+		}
+	}
+	&__field > &__input:focus~label, 
+	&__field > &__input:not(:placeholder-shown)~label {
+		font-size: 14px;
+		opacity: .65;
+		transform: scale(0.85) translateY(-16px) translateX(0px);
+	}
+	&__field > &__input:focus, 
+	&__field > &__input:not(:placeholder-shown) {
+		padding-top: 1.625rem;
+		padding-bottom: 5px;
+		border-bottom: 1px solid rgb(0 0 0 / 80%);
+	}
+	&__submit {
+		display: flex;
+		flex-direction: column;
+		gap: 30px;
+		align-items: center;
+
+		&-police {
+			padding-left: var(--container-padding);
+			padding-right: var(--container-padding);
+			font-size: 14px;
+			line-height: 140%;
+			text-align: center;
+			color: #808080;
+			@include breakpoint(xxl) {
+				font-size: 12px;
+			}
+			@include breakpoint(xl) {
+				font-size: 11px;
+			}
+			@include breakpoint(md ) {
+				font-size: 12px;
+			}
+			> a {
+				text-decoration: underline;
+				text-underline-offset: 3px;
+				text-decoration-thickness: 0.5px;
+				transition: $trans;
+				@media ( hover : hover ) {
+					&:hover {
+						text-underline-offset: 5px;
+					}
+				}
+			}
+	
+		}
+		&-button {
+			padding: 24px 69px;
+			@include breakpoint(xxl) {
+				padding: 24px 69px;
+			}
+			@include breakpoint(xl) {
+				padding: 20px 40px;
+			}
+			@include breakpoint(lg) {
+				padding: 20px 40px;
+			}
+			@include breakpoint(md) {
+				padding: 18px 50px;
+			}
+		}
+	}
 }
 
 
@@ -154,6 +375,8 @@
 	padding-bottom: var(--header-padding);
 	background: #fff;
 	z-index: 10;
+
+	&.open-menu { right: 16px !important;}
 
 	&__grid {
 		display: grid;
@@ -174,7 +397,6 @@
 			gap: 20px;
 		}
 	}
-
 	&__burger {
 		grid-area: B;
 	}
