--- a/src/scss/styles.css
+++ b/src/scss/styles.css
@@ -144,12 +144,32 @@
     --fs-14-xs-10: 0.625rem;
   }
 }
+@keyframes modalAnimation {
+  0% {
+    opacity: 0;
+    display: none;
+  }
+  100% {
+    opacity: 1;
+    display: block;
+  }
+}
+@keyframes modalAnimationClose {
+  0% {
+    opacity: 1;
+    display: block;
+  }
+  100% {
+    opacity: 0;
+    display: none;
+  }
+}
 @keyframes up {
   from {
     transform: translateY(0px);
   }
   to {
-    transform: translateY(-5px);
+    transform: translateY(-2px);
   }
 }
 @keyframes down {
@@ -157,7 +177,7 @@
     transform: translateY(0px);
   }
   to {
-    transform: translateY(5px);
+    transform: translateY(2px);
   }
 }
 @keyframes right {
@@ -364,6 +384,120 @@ footer {
   padding-right: 17px;
 }
 
+.callback-modal {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  padding: 80px 0;
+  background-color: #fff;
+  z-index: 50;
+  transition: all 0.2s ease-out;
+}
+.callback-modal:not(.is-open) {
+  display: none;
+  animation: modalAnimationClose 0.3s ease-in-out 0s 1 normal forwards;
+}
+.callback-modal.is-open {
+  animation: modalAnimation 0.3s ease-in-out 0s 1 normal forwards;
+}
+.callback-modal__close {
+  position: fixed;
+  top: 60px;
+  right: 60px;
+}
+@media (max-width: 1279px) and (min-width: 0px) {
+  .callback-modal__close {
+    top: 50px;
+    right: 50px;
+  }
+}
+@media (max-width: 1023px) and (min-width: 0px) {
+  .callback-modal__close {
+    top: 40px;
+    right: 40px;
+  }
+}
+@media (max-width: 766px) and (min-width: 0px) {
+  .callback-modal__close {
+    top: 20px;
+    right: 20px;
+  }
+}
+.callback-modal__content {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 80px;
+  width: 100%;
+  height: 100%;
+  min-height: -webkit-fit-content;
+  min-height: -moz-fit-content;
+  min-height: fit-content;
+  max-width: calc(var(--container-padding) * 2 + 587px);
+  margin: 0 auto;
+  padding-left: var(--container-padding);
+  padding-right: var(--container-padding);
+  overflow-y: auto;
+}
+@media (max-width: 1769px) and (min-width: 0px) {
+  .callback-modal__content {
+    gap: 50px;
+  }
+}
+@media (max-width: 766px) and (min-width: 0px) {
+  .callback-modal__content {
+    gap: 30px;
+    align-items: start;
+  }
+}
+.callback-modal__title {
+  font-size: 52px;
+  font-family: "Proxima Nova regular", sans-serif;
+  line-height: 120%;
+  text-transform: uppercase;
+}
+@media (max-width: 1769px) and (min-width: 0px) {
+  .callback-modal__title {
+    font-size: 40px;
+  }
+}
+@media (max-width: 1279px) and (min-width: 0px) {
+  .callback-modal__title {
+    font-size: 28px;
+  }
+}
+@media (max-width: 766px) and (min-width: 0px) {
+  .callback-modal__title {
+    padding-left: 15px;
+    font-size: 20px;
+  }
+}
+.callback-modal__form {
+  display: flex;
+  flex-direction: column;
+  gap: 50px;
+}
+@media (max-width: 1769px) and (min-width: 0px) {
+  .callback-modal__form {
+    gap: 40px;
+  }
+}
+@media (max-width: 1279px) and (min-width: 0px) {
+  .callback-modal__form {
+    gap: 45px;
+  }
+}
+@media (max-width: 766px) and (min-width: 0px) {
+  .callback-modal__form {
+    gap: 40px;
+  }
+}
+
 .btn-main {
   display: flex;
   align-items: center;
@@ -383,6 +517,12 @@ footer {
   white-space: nowrap;
   border-radius: 100px;
   background-color: var(--main-color);
+  transition: all 0.2s ease-out;
+}
+@media (hover: hover) {
+  .btn-main:hover {
+    background-color: var(--main-color-hover);
+  }
 }
 @media (max-width: 1769px) and (min-width: 0px) {
   .btn-main {
@@ -441,6 +581,8 @@ footer {
   width: 38px;
   height: 2px;
   background-color: var(--main-color);
+  transform: translateY(0);
+  transition: all 0.2s ease-out;
 }
 @media (max-width: 1769px) and (min-width: 0px) {
   .burger-menu__icon > span {
@@ -475,12 +617,140 @@ footer {
     display: none;
   }
 }
+@media (hover: hover) {
+  .burger-menu:hover .burger-menu__icon > span:first-child {
+    transform: translateY(-2px);
+  }
+  .burger-menu:hover .burger-menu__icon > span:last-child {
+    transform: translateY(2px);
+  }
+}
 
 .logo {
   display: block;
   width: -webkit-fit-content;
   width: -moz-fit-content;
   width: fit-content;
+}
+
+.form {
+  width: 100%;
+}
+.form__field {
+  position: relative;
+}
+.form__field > label {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  padding: 5px 16px 5px 0;
+  font-size: 17px;
+  line-height: 160%;
+  text-transform: uppercase;
+  pointer-events: none;
+  transform-origin: 0 0;
+  transition: opacity 0.1s ease-in-out, transform 0.1s ease-in-out;
+}
+.form__input {
+  display: block;
+  width: 100%;
+  height: 50px;
+  padding: 5px 16px 5px 0;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 160%;
+  color: #000;
+  background-color: #fff;
+  background-clip: padding-box;
+  outline: none;
+  border: none;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  border-radius: 0;
+  transition: all 0.2s ease-out;
+}
+.form__input::placeholder {
+  opacity: 0;
+}
+@media (hover: hover) {
+  .form__input:hover {
+    border-bottom: 1px solid rgba(0, 0, 0, 0.8);
+  }
+}
+.form__field > .form__input:focus ~ label, .form__field > .form__input:not(:placeholder-shown) ~ label {
+  font-size: 14px;
+  opacity: 0.65;
+  transform: scale(0.85) translateY(-16px) translateX(0px);
+}
+.form__field > .form__input:focus, .form__field > .form__input:not(:placeholder-shown) {
+  padding-top: 1.625rem;
+  padding-bottom: 5px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.8);
+}
+.form__submit {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  align-items: center;
+}
+.form__submit-police {
+  padding-left: var(--container-padding);
+  padding-right: var(--container-padding);
+  font-size: 14px;
+  line-height: 140%;
+  text-align: center;
+  color: #808080;
+}
+@media (max-width: 1769px) and (min-width: 0px) {
+  .form__submit-police {
+    font-size: 12px;
+  }
+}
+@media (max-width: 1279px) and (min-width: 0px) {
+  .form__submit-police {
+    font-size: 11px;
+  }
+}
+@media (max-width: 766px) and (min-width: 0px) {
+  .form__submit-police {
+    font-size: 12px;
+  }
+}
+.form__submit-police > a {
+  text-decoration: underline;
+  text-underline-offset: 3px;
+  text-decoration-thickness: 0.5px;
+  transition: all 0.2s ease-out;
+}
+@media (hover: hover) {
+  .form__submit-police > a:hover {
+    text-underline-offset: 5px;
+  }
+}
+.form__submit-button {
+  padding: 24px 69px;
+}
+@media (max-width: 1769px) and (min-width: 0px) {
+  .form__submit-button {
+    padding: 24px 69px;
+  }
+}
+@media (max-width: 1279px) and (min-width: 0px) {
+  .form__submit-button {
+    padding: 20px 40px;
+  }
+}
+@media (max-width: 1023px) and (min-width: 0px) {
+  .form__submit-button {
+    padding: 20px 40px;
+  }
+}
+@media (max-width: 766px) and (min-width: 0px) {
+  .form__submit-button {
+    padding: 18px 50px;
+  }
 }
 
 .header {
@@ -494,6 +764,9 @@ footer {
   padding-bottom: var(--header-padding);
   background: #fff;
   z-index: 10;
+}
+.header.open-menu {
+  right: 16px !important;
 }
 .header__grid {
   display: grid;
