--- a/src/scss/modules/_main.scss
+++ b/src/scss/modules/_main.scss
@@ -66,6 +66,12 @@
 		position: fixed;
 		top: 60px;
 		right: 60px;
+		transition: $trans;
+		@media ( hover : hover ) {
+			&:hover {
+				transform: rotate(45deg);
+			}
+		}
 		@include breakpoint(xl) {
 			top: 50px;
 			right: 50px;
@@ -133,6 +139,9 @@
 		}
 	}
 
+}
+.hover-anim {
+	> span { display: block;} 
 }
 
 
@@ -429,7 +438,14 @@
 		font-size: 17px;
 		font-family: $semibold;
 		line-height: 100%;
+
 		> .phone-icon { display: none;}
+
+		@media ( hover : hover ) {
+			&:hover {
+				color: var(--main-color);
+			}
+		}
 		@include breakpoint(xxl) {
 			font-size: 14px;
 		}
@@ -474,13 +490,10 @@
 	}
 }
 
-.hover-anim {
-	> span { display: block;} 
-}
 .footer {
 	margin-top: var(--page-gap);
-	padding: 40px 0;
-	background: #333;
+	padding: 20px 0;
+	background: #fff;
 }
 
 .page {
@@ -502,30 +515,82 @@
 }
 
 .main-hero {
+
 	display: flex;
 	flex-direction: column;
-	justify-content: space-between;
 	gap: 50px;
 	height: calc(100vh - var(--header-height));
-	padding-bottom: 60px;
+	padding-bottom: 20px;
+
+	@include breakpoint(xxl) {
+		gap: 40px;
+	}
+	@include breakpoint(xl) {
+		gap: 30px;
+	}
+	@include breakpoint(lg) {
+		gap: 40px;
+	}
+	@include breakpoint(md) {
+		gap: 20px;
+	}
 
 	&__pic {
-		flex: 0 1 auto;
+		flex: 1 1 auto;
+		img {
+			width: 100%;
+			height: 100%;
+			object-fit: cover;
+		}
 	}
 	&__content {
 		display: flex;
-		align-items: end;
+		justify-content: space-between;
+		gap: 40px;
+		@include breakpoint(lg) {
+			flex-direction: column;
+		}
+		@include breakpoint(md) {
+			gap: 20px;
+		}
 	}
 	&__title {
-		flex: 1 1 auto;
+		align-self: flex-end;
 		font-size: 31px;
 		color: var(--main-color);
 		font-family: $r;
 		line-height: 140%;
 		text-transform: uppercase;
+		@include breakpoint(xxl) {
+			font-size: 26px;
+		}
+		@include breakpoint(xl) {
+			font-size: 19px;
+		}
+		@include breakpoint(lg) {
+			font-size: 26px;
+			align-self: self-start;
+		}
+		@include breakpoint(md) {
+			font-size: 13px;
+		}
+
 	}
 	&__logo {
-		flex: 0 1 862px;
-		// width: fit-content;
+		max-height: 137px;
+		@include breakpoint(xxl) {
+			max-height: 114px;
+		}
+		@include breakpoint(xl) {
+			max-height: 88px;
+		}
+		@include breakpoint(lg) {
+			width: 100%;
+			max-height: 100%;
+		}
+		> img {
+			width: 100%;
+			height: 100%;
+		}
 	}
 }
