--- a/src/scss/styles.css
+++ b/src/scss/styles.css
@@ -408,6 +408,12 @@ footer {
   position: fixed;
   top: 60px;
   right: 60px;
+  transition: all 0.2s ease-out;
+}
+@media (hover: hover) {
+  .callback-modal__close:hover {
+    transform: rotate(45deg);
+  }
 }
 @media (max-width: 1279px) and (min-width: 0px) {
   .callback-modal__close {
@@ -496,6 +502,10 @@ footer {
   .callback-modal__form {
     gap: 40px;
   }
+}
+
+.hover-anim > span {
+  display: block;
 }
 
 .btn-main {
@@ -835,6 +845,11 @@ footer {
 .header__phone > .phone-icon {
   display: none;
 }
+@media (hover: hover) {
+  .header__phone:hover {
+    color: var(--main-color);
+  }
+}
 @media (max-width: 1769px) and (min-width: 0px) {
   .header__phone {
     font-size: 14px;
@@ -892,14 +907,10 @@ footer {
   }
 }
 
-.hover-anim > span {
-  display: block;
-}
-
 .footer {
   margin-top: var(--page-gap);
-  padding: 40px 0;
-  background: #333;
+  padding: 20px 0;
+  background: #fff;
 }
 
 .page {
@@ -921,28 +932,104 @@ footer {
 .main-hero {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   gap: 50px;
   height: calc(100vh - var(--header-height));
-  padding-bottom: 60px;
+  padding-bottom: 20px;
+}
+@media (max-width: 1769px) and (min-width: 0px) {
+  .main-hero {
+    gap: 40px;
+  }
+}
+@media (max-width: 1279px) and (min-width: 0px) {
+  .main-hero {
+    gap: 30px;
+  }
+}
+@media (max-width: 1023px) and (min-width: 0px) {
+  .main-hero {
+    gap: 40px;
+  }
+}
+@media (max-width: 766px) and (min-width: 0px) {
+  .main-hero {
+    gap: 20px;
+  }
 }
 .main-hero__pic {
-  flex: 0 1 auto;
+  flex: 1 1 auto;
+}
+.main-hero__pic img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 .main-hero__content {
   display: flex;
-  align-items: end;
+  justify-content: space-between;
+  gap: 40px;
+}
+@media (max-width: 1023px) and (min-width: 0px) {
+  .main-hero__content {
+    flex-direction: column;
+  }
+}
+@media (max-width: 766px) and (min-width: 0px) {
+  .main-hero__content {
+    gap: 20px;
+  }
 }
 .main-hero__title {
-  flex: 1 1 auto;
+  align-self: flex-end;
   font-size: 31px;
   color: var(--main-color);
   font-family: "Proxima Nova regular", sans-serif;
   line-height: 140%;
   text-transform: uppercase;
 }
+@media (max-width: 1769px) and (min-width: 0px) {
+  .main-hero__title {
+    font-size: 26px;
+  }
+}
+@media (max-width: 1279px) and (min-width: 0px) {
+  .main-hero__title {
+    font-size: 19px;
+  }
+}
+@media (max-width: 1023px) and (min-width: 0px) {
+  .main-hero__title {
+    font-size: 26px;
+    align-self: self-start;
+  }
+}
+@media (max-width: 766px) and (min-width: 0px) {
+  .main-hero__title {
+    font-size: 13px;
+  }
+}
 .main-hero__logo {
-  flex: 0 1 862px;
+  max-height: 137px;
+}
+@media (max-width: 1769px) and (min-width: 0px) {
+  .main-hero__logo {
+    max-height: 114px;
+  }
+}
+@media (max-width: 1279px) and (min-width: 0px) {
+  .main-hero__logo {
+    max-height: 88px;
+  }
+}
+@media (max-width: 1023px) and (min-width: 0px) {
+  .main-hero__logo {
+    width: 100%;
+    max-height: 100%;
+  }
+}
+.main-hero__logo > img {
+  width: 100%;
+  height: 100%;
 }
 
 @media (max-width: 1024px) and (min-width: 0px) {
