--- a/src/pug/layouts/header.pug
+++ b/src/pug/layouts/header.pug
@@ -8,7 +8,7 @@ header.header
                     span
                     span
                 .burger-menu__text Меню
-            button.header__dropdown.btn-main.btn-dropdown 
+            button.header__dropdown.btn-main.btn-dropdown.hover-anim
                 span Выбрать квартиру
             a.header__logo.logo(href="#")
                 img(src="img/logo.svg", alt="")
