--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -18,3 +18,7 @@ block content
 					img(src="img/content-logo.svg", alt="")
 
 		section.section.about-project.container
+			figure.about-project__pic
+				img(src="img/about1.webp", alt="")
+				figcaption.about-project__pic__caption О проекте
+			.about-project__content 123
