--- a/src/scss/modules/_main.scss
+++ b/src/scss/modules/_main.scss
@@ -432,7 +432,7 @@
 			gap: 62px;
 		}
 		@include breakpoint(md) {
-			grid-template-columns: auto 1fr auto;
+			grid-template-columns: auto 1fr 40px;
 			grid-template-areas: "B L P";
 			gap: 20px;
 		}
@@ -556,6 +556,7 @@
 	gap: 50px;
 	height: calc(100vh - var(--header-height));
 	padding-bottom: 20px;
+	transition: $trans;
 
 	@include breakpoint(xxl) {
 		gap: 40px;
@@ -565,11 +566,13 @@
 	}
 	@include breakpoint(lg) {
 		gap: 40px;
+		height: auto;
+		@media screen and (orientation:portrait) {
+			height: calc(100dvh - var(--header-height));
+		}
 	}
 	@include breakpoint(md) {
 		gap: 20px;
-		height: calc(100dvh - var(--header-height));
-
 	}
 
 	&__pic {
