add about-project content

--- a/src/pug/layouts/head.pug
+++ b/src/pug/layouts/head.pug
@@ -12,8 +12,9 @@ html(lang="ru")
         link(href='css/styles.min.css', rel='stylesheet')
         link(rel="icon" href="favicon.ico" type="image/svg+xml")
         title #{title}
+        script(src='js/smooth-scrollbar.js')
         script(src='js/anime.min.js')
-        script(src='js/main.js')
+        script(src='js/index.js')
     body
         include svg.pug
         block modal
