--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -21,4 +21,20 @@ block content
 			figure.about-project__pic
 				img(src="img/about1.webp", alt="")
 				figcaption.about-project__pic__caption О проекте
-			.about-project__content 123
+			.about-project__content
+				.spacer
+				h2.about-project__title Уютное и безопасное пространство для счастливой, 
+					span спокойной и размеренной жизни
+				p.about-project__descr
+					span Квартиры от 65 до 356 м2 с чистовой отделкой, 
+					| балконами, лоджиями и террасами В собственной ЗАКРЫТОЙ охраняемой территории.
+				.about-project__video 
+					
+					.preview-video
+						.preview-video__button-wrap
+							img(src="img/video-prev.png", alt="")
+							button Play
+						.preview-video__player 
+							button close 
+							.preview-video__video 
+								//- video(src="/") 
