--- a/src/scss/modules/_main.scss
+++ b/src/scss/modules/_main.scss
@@ -173,6 +173,22 @@
 		}
 	}
 }
+.spacer {
+	display: block;
+	width: 63px;
+	height: 12px;
+	background: var(--main-color);
+
+	@include breakpoint(xxl) { 
+		width: 49px;
+		height: 9px;
+	}
+	@include breakpoint(xl) { 
+		width: 35px;
+		height: 6px;
+	}
+}
+
 
 
 
@@ -400,6 +416,65 @@
 		}
 	}
 }
+.preview-video {
+
+	&__button-wrap {
+		position: relative;
+		display: block;
+		width: var(--video-preview-size);
+		height: var(--video-preview-size);
+		padding: 50px;
+		z-index: 1;
+		> img {
+			position: absolute;
+			top: 0;
+			left: 0;
+			width: 100%;
+			height: 100%;
+			border-radius: 100%;
+			pointer-events: none;
+			z-index: -1;
+		}
+
+		> button {
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			gap: 6px;
+			width: 100%;
+			height: 100%;
+			color: #fff;
+			font-size: 18px;
+			line-height: 160%;
+			text-transform: uppercase;
+			border: 2px solid #fff;
+			border-radius: 100%;
+			&::before {
+				content: '';
+				display: block;
+				width: 13px;
+				height: 14px;
+				background: url(../img/play-icon.svg) no-repeat;
+				background-size: contain;
+				background-position: center;
+			}
+			@include breakpoint(xxl) { 
+				font-size: 14px;
+				&::before {
+					width: 10px;
+					height: 11px;
+				}
+			}
+			@include breakpoint(xl) { 
+				font-size: 10px;
+				&::before {
+					width: 7px;
+					height: 8px;
+				}
+			}
+		}
+	}
+}
 
 
 
@@ -522,6 +597,7 @@
 	&.is-fixed {
 		--header-padding: 20px;
 		--header-height: calc(var(--header-grid-height) + var(--header-padding) * 2);
+		box-shadow: var(--header-fixed-shadow);
 	}
 }
 
@@ -692,6 +768,85 @@
 			gap: 10px;
 			margin-right: calc( var(--about-figure-icon-size) / 2 );
 
+		}
+	}
+	&__content {
+
+		display: flex;
+		flex-direction: column;
+		justify-content: end;
+		max-width: 587px;
+
+		@include breakpoint(xxl) { 
+			max-width: 454px;
+		}
+		@include breakpoint(xl) { 
+			max-width: 334px;
+		}
+	}
+	&__title {
+		margin-top: 65px;
+		font-size: 34px;
+		font-family: $r;
+		line-height: 140%;
+		text-transform: uppercase;
+		> span {
+			color: var(--main-color);
+		}
+		@include breakpoint(xxl) { 
+			margin-top: 50px;
+			font-size: 26px;
+		}
+		@include breakpoint(xl) { 
+			margin-top: 35px;
+			font-size: 19px;
+		}
+		@include breakpoint(lg) { 
+			margin-top: 30px;
+		}
+		@include breakpoint(md) { 
+			font-size: 16px;
+		}
+	}
+	&__descr {
+		margin-top: 120px;
+		font-size: 20px;
+		line-height: 160%;
+		text-transform: uppercase;
+		> span {
+			color: var(--main-color);
+		}
+		@include breakpoint(xxl) { 
+			margin-top: 100px;
+			font-size: 16px;
+		}
+		@include breakpoint(xl) { 
+			margin-top: 65px;
+			font-size: 12px;
+		}
+		@include breakpoint(lg) { 
+			margin-top: 20px;
+		}
+		@include breakpoint(md) { 
+			margin-top: 40px;
+			font-size: 11px;
+		}
+	}
+	&__video {
+		
+		margin-top: 100px;
+
+		@include breakpoint(xxl) { 
+			margin-top: 96px;
+		}
+		@include breakpoint(xl) { 
+			margin-top: 60px;
+		}
+		@include breakpoint(lg) { 
+			margin-top: 30px;
+		}
+		@include breakpoint(md) { 
+			margin-top: 20px;
 		}
 	}
 
