--- a/src/scss/modules/_main.scss
+++ b/src/scss/modules/_main.scss
@@ -418,8 +418,53 @@
 }
 .preview-video {
 
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	gap: 20px;
+
+	&::after {
+		content: '';
+		order: 2;
+		display: block;
+		width: 100%;
+		height: 1px;
+		background-color: #D7D7D7;
+	}
+
+	&__title {
+		position: relative;
+		flex: 1 0 auto;
+		order: 1;
+		color: #111;
+		font-size: 18px;
+		font-family: $semibold;
+		line-height: 160%;
+		text-transform: uppercase;
+
+		&::after {
+			content: attr(data-duration);
+			position: absolute;
+			left: 0;
+			bottom: 0;
+			transform: translateY(100%);
+			font-family: $r;
+			line-height: 160%;
+			text-transform: uppercase;
+			opacity: 0.5;
+		}
+		@include breakpoint(xxl) { 
+			font-size: 14px;
+		}
+		@include breakpoint(xl) { 
+			font-size: 10px;
+			&::after { font-size: 13px };
+		}
+	}
 	&__button-wrap {
 		position: relative;
+		flex: 1 0 auto;
+		order: 3;
 		display: block;
 		width: var(--video-preview-size);
 		height: var(--video-preview-size);
@@ -447,7 +492,7 @@
 			font-size: 18px;
 			line-height: 160%;
 			text-transform: uppercase;
-			border: 2px solid #fff;
+			border: 1px solid #fff;
 			border-radius: 100%;
 			&::before {
 				content: '';
@@ -473,6 +518,59 @@
 				}
 			}
 		}
+		@include breakpoint(xxl) { 
+			padding: 38px;
+		}
+		@include breakpoint(xl) { 
+			padding: 27px;
+		}
+	}
+	&__player {
+		position: fixed;
+		top: -9999px;
+		left: -9999px;
+		width: 1px;
+		height: 1px;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		background: #000;
+
+		&__close {
+			position: absolute;
+			top: 20px;
+			right: 20px;
+			z-index: 10;
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			width: 40px;
+			height: 40px;
+			padding: 10px;
+			background: #fff;
+			border-radius: 100%;
+			> .close-icon { transition: $trans; }
+
+			@media ( hover : hover ) {
+				&:hover {
+					> .close-icon {
+						transform: rotate(180deg);
+					}
+				}
+			}
+		}
+	}
+	&__inner-video {
+		> video {
+			width: 100%;
+			height: 100%;
+		}
+	}
+	@include breakpoint(xxl) { 
+		gap: 15px;
+	}
+	@include breakpoint(xl) { 
+		gap: 20px;
 	}
 }
 
@@ -725,6 +823,10 @@
 		align-items: end;
 		gap: 35px;
 
+		> img {
+			width: 100%;
+			height: 100%;
+		}
 		&__caption {
 			font-size: 17px;
 			color: var(--main-color);
@@ -776,12 +878,21 @@
 		flex-direction: column;
 		justify-content: end;
 		max-width: 587px;
+		margin-top: 110px;
 
 		@include breakpoint(xxl) { 
 			max-width: 454px;
+			margin-top: 102px;
 		}
 		@include breakpoint(xl) { 
 			max-width: 334px;
+			margin-top: 86px;
+		}
+		@include breakpoint(lg) { 
+			margin-top: 60px;
+		}
+		@include breakpoint(md) { 
+			margin-top: 0px;
 		}
 	}
 	&__title {
@@ -861,7 +972,7 @@
 		margin-top: 126px;
 	}
 	@include breakpoint(lg) { 
-		grid-template-columns: 290px 1fr;
+		grid-template-columns: 260px 1fr;
 		gap: 94px;
 		margin-top: 90px;
 	}
