--- a/src/scss/styles.css
+++ b/src/scss/styles.css
@@ -89,6 +89,7 @@
     --container-padding: 40px;
     --header-padding: 30px;
     --about-figure-icon-size: 200px;
+    --video-preview-size: 186px;
   }
 }
 @media (max-width: 1279px) and (min-width: 0px) {
@@ -101,6 +102,7 @@
     --fs-14-12: 0.75rem;
     --container-padding: 30px;
     --about-figure-icon-size: 148px;
+    --video-preview-size: 133px;
   }
 }
 @media (max-width: 1023px) and (min-width: 0px) {
@@ -139,6 +141,7 @@
     --header-grid-height: 41px;
     --header-padding: 20px;
     --about-figure-icon-size: 87px;
+    --video-preview-size: 131px;
   }
 }
 @media (max-width: 360px) and (min-width: 0px) {
@@ -793,8 +796,58 @@ footer {
   }
 }
 
+.preview-video {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 20px;
+}
+.preview-video::after {
+  content: "";
+  order: 2;
+  display: block;
+  width: 100%;
+  height: 1px;
+  background-color: #D7D7D7;
+}
+.preview-video__title {
+  position: relative;
+  flex: 1 0 auto;
+  order: 1;
+  color: #111;
+  font-size: 18px;
+  font-family: "Proxima Nova Semibold", sans-serif;
+  line-height: 160%;
+  text-transform: uppercase;
+}
+.preview-video__title::after {
+  content: attr(data-duration);
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  transform: translateY(100%);
+  font-family: "Proxima Nova regular", sans-serif;
+  line-height: 160%;
+  text-transform: uppercase;
+  opacity: 0.5;
+}
+@media (max-width: 1769px) and (min-width: 0px) {
+  .preview-video__title {
+    font-size: 14px;
+  }
+}
+@media (max-width: 1279px) and (min-width: 0px) {
+  .preview-video__title {
+    font-size: 10px;
+  }
+  .preview-video__title::after {
+    font-size: 13px;
+  }
+}
 .preview-video__button-wrap {
   position: relative;
+  flex: 1 0 auto;
+  order: 3;
   display: block;
   width: var(--video-preview-size);
   height: var(--video-preview-size);
@@ -822,7 +875,7 @@ footer {
   font-size: 18px;
   line-height: 160%;
   text-transform: uppercase;
-  border: 2px solid #fff;
+  border: 1px solid #fff;
   border-radius: 100%;
 }
 .preview-video__button-wrap > button::before {
@@ -850,6 +903,63 @@ footer {
   .preview-video__button-wrap > button::before {
     width: 7px;
     height: 8px;
+  }
+}
+@media (max-width: 1769px) and (min-width: 0px) {
+  .preview-video__button-wrap {
+    padding: 38px;
+  }
+}
+@media (max-width: 1279px) and (min-width: 0px) {
+  .preview-video__button-wrap {
+    padding: 27px;
+  }
+}
+.preview-video__player {
+  position: fixed;
+  top: -9999px;
+  left: -9999px;
+  width: 1px;
+  height: 1px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #000;
+}
+.preview-video__player__close {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  z-index: 10;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 40px;
+  height: 40px;
+  padding: 10px;
+  background: #fff;
+  border-radius: 100%;
+}
+.preview-video__player__close > .close-icon {
+  transition: all 0.2s ease-out;
+}
+@media (hover: hover) {
+  .preview-video__player__close:hover > .close-icon {
+    transform: rotate(180deg);
+  }
+}
+.preview-video__inner-video > video {
+  width: 100%;
+  height: 100%;
+}
+@media (max-width: 1769px) and (min-width: 0px) {
+  .preview-video {
+    gap: 15px;
+  }
+}
+@media (max-width: 1279px) and (min-width: 0px) {
+  .preview-video {
+    gap: 20px;
   }
 }
 
@@ -1148,6 +1258,10 @@ footer {
   align-items: end;
   gap: 35px;
 }
+.about-project__pic > img {
+  width: 100%;
+  height: 100%;
+}
 .about-project__pic__caption {
   font-size: 17px;
   color: var(--main-color);
@@ -1211,15 +1325,28 @@ footer {
   flex-direction: column;
   justify-content: end;
   max-width: 587px;
+  margin-top: 110px;
 }
 @media (max-width: 1769px) and (min-width: 0px) {
   .about-project__content {
     max-width: 454px;
+    margin-top: 102px;
   }
 }
 @media (max-width: 1279px) and (min-width: 0px) {
   .about-project__content {
     max-width: 334px;
+    margin-top: 86px;
+  }
+}
+@media (max-width: 1023px) and (min-width: 0px) {
+  .about-project__content {
+    margin-top: 60px;
+  }
+}
+@media (max-width: 766px) and (min-width: 0px) {
+  .about-project__content {
+    margin-top: 0px;
   }
 }
 .about-project__title {
@@ -1325,7 +1452,7 @@ footer {
 }
 @media (max-width: 1023px) and (min-width: 0px) {
   .about-project {
-    grid-template-columns: 290px 1fr;
+    grid-template-columns: 260px 1fr;
     gap: 94px;
     margin-top: 90px;
   }
