add form success

--- a/src/pug/components/modal.pug
+++ b/src/pug/components/modal.pug
@@ -19,3 +19,4 @@ include ../layouts/mixins.pug
                     span Нажимая на кнопку «Отправить», вы ознакомлены и соглашаетесь с&nbsp;
                     a(href="#") политикой обработки персональных данных
                 button.form__submit-button.btn-main Отправить
+            .form__success Заявка отправлена
