--- a/src/scss/modules/_main.scss
+++ b/src/scss/modules/_main.scss
@@ -191,8 +191,6 @@
 
 
 
-
-
 .btn {
 	&-main {
 		display: flex;
@@ -415,6 +413,21 @@
 			}
 		}
 	}
+	&__success {
+		position: absolute;
+		top: 40px;
+		left: 50%;
+		display: none;
+		padding: 20px 30px;
+		border-radius: 30px;
+		background: #84f1d4;
+		font-size: 14px;
+		line-height: 100%;
+		text-transform: uppercase;
+		transform: translateX(-50%);
+		z-index: 5;
+		&.show {display: block;}
+	}
 }
 .preview-video {
 
@@ -470,59 +483,87 @@
 		height: var(--video-preview-size);
 		padding: 50px;
 		z-index: 1;
-		> img {
-			position: absolute;
-			top: 0;
-			left: 0;
-			width: 100%;
-			height: 100%;
-			border-radius: 100%;
-			pointer-events: none;
-			z-index: -1;
-		}
 
-		> button {
-			display: flex;
-			align-items: center;
-			justify-content: center;
-			gap: 6px;
-			width: 100%;
-			height: 100%;
-			color: #fff;
-			font-size: 18px;
-			line-height: 160%;
-			text-transform: uppercase;
-			border: 1px solid #fff;
-			border-radius: 100%;
-			&::before {
-				content: '';
-				display: block;
-				width: 13px;
-				height: 14px;
-				background: url(../img/play-icon.svg) no-repeat;
-				background-size: contain;
-				background-position: center;
-			}
-			@include breakpoint(xxl) { 
-				font-size: 14px;
-				&::before {
-					width: 10px;
-					height: 11px;
-				}
-			}
-			@include breakpoint(xl) { 
-				font-size: 10px;
-				&::before {
-					width: 7px;
-					height: 8px;
-				}
-			}
-		}
 		@include breakpoint(xxl) { 
 			padding: 38px;
 		}
 		@include breakpoint(xl) { 
 			padding: 27px;
+		}
+	}
+	&__preview {
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		border-radius: 100%;
+		pointer-events: none;
+		z-index: -1;
+	}
+	&__button {
+		position: relative;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		gap: 6px;
+		width: 100%;
+		height: 100%;
+		color: #fff;
+		font-size: 18px;
+		line-height: 160%;
+		text-transform: uppercase;
+		border: 1px solid #fff;
+		border-radius: 100%;
+		transform: translate(0, 0);
+		transition: $trans;
+		z-index: 1;
+		&::before {
+			content: '';
+			display: block;
+			width: 13px;
+			height: 14px;
+			background: url(../img/play-icon.svg) no-repeat;
+			background-size: contain;
+			background-position: center;
+		}
+		&::after {
+			content: '';
+			position: absolute;
+			top: 50%;
+			left: 50%;
+			display: block;
+			width: 5%;
+			height: 5%;
+			background: #000;
+			border-radius: 100%;
+			transform: translate(-50%, -50%);
+			transition: all .6s ease-in-out;
+			pointer-events: none;
+			opacity: .3;
+			z-index: -1;
+		}
+		@media ( hover : hover ) {
+			&:hover {
+				&::after {
+					width: 60%;
+					height: 60%;
+				}
+			}
+		}
+		@include breakpoint(xxl) { 
+			font-size: 14px;
+			&::before {
+				width: 10px;
+				height: 11px;
+			}
+		}
+		@include breakpoint(xl) { 
+			font-size: 10px;
+			&::before {
+				width: 7px;
+				height: 8px;
+			}
 		}
 	}
 	&__player {
@@ -698,12 +739,12 @@
 		box-shadow: var(--header-fixed-shadow);
 	}
 }
-
 .footer {
 	margin-top: var(--page-gap);
 	padding: 20px 0;
 	background: #fff;
 }
+
 
 .page {
 
@@ -722,6 +763,7 @@
 		font-family: $bold;
 	}
 }
+
 
 .main-hero {
 
@@ -742,7 +784,7 @@
 		gap: 40px;
 		height: auto;
 		@media screen and (orientation:portrait) {
-			height: calc(100lvh - var(--header-height));
+			height: calc(100dvh - var(--header-height));
 		}
 	}
 	@include breakpoint(md) {
@@ -808,7 +850,6 @@
 		}
 	}
 }
-
 .about-project {
 
 	display: grid;
@@ -873,10 +914,9 @@
 		}
 	}
 	&__content {
-
 		display: flex;
 		flex-direction: column;
-		justify-content: end;
+		justify-content: flex-end;
 		max-width: 587px;
 		margin-top: 110px;
 
