--- a/src/scss/styles.css
+++ b/src/scss/styles.css
@@ -27,39 +27,6 @@
   font-display: swap;
 }
 :root {
-  --fs-72-32: 4.5rem;
-  --fs-72-24: var(--fs-72-32);
-  --fs-48-24: 3rem;
-  --fs-48-sm-18: var(--fs-48-24);
-  --fs-48-xs-18: var(--fs-48-24);
-  --fs-36-24: 2.25rem;
-  --fs-36-sm-18: var(--fs-36-24);
-  --fs-32-24: 2rem;
-  --fs-32-sm-18: var(--fs-32-24);
-  --fs-32-sm-16: var(--fs-32-24);
-  --fs-24-18: 1.5rem;
-  --fs-24-lg-16: var(--fs-24-18);
-  --fs-24-sm-16: var(--fs-24-18);
-  --fs-18-16: 1.125rem;
-  --fs-18-14: var(--fs-18-16);
-  --fs-16-14: 1rem;
-  --fs-16-sm-12: var(--fs-16-14);
-  --fs-16-xs-12: var(--fs-16-14);
-  --fs-16-sm-10: var(--fs-16-14);
-  --fs-16-xs-10: var(--fs-16-14);
-  --fs-14-12: 0.875rem;
-  --fs-14-sm-10: var(--fs-14-12);
-  --fs-14-xs-10: var(--fs-14-12);
-  --size-60-50: 60px;
-  --size-60-40: 60px;
-  --size-50-40: 50px;
-  --size-50-30: 50px;
-  --size-40-30: 40px;
-  --size-30-25: 30px;
-  --border-raduis-24: 24px;
-  --border-raduis-18: 18px;
-  --border-raduis-16: 16px;
-  --border-raduis-main: 2px;
   --container: calc( var(--container-padding) * 2 + 1760px );
   --container-padding: 80px;
   --page-gap: 40px;
@@ -81,10 +48,6 @@
 
 @media (max-width: 1769px) and (min-width: 0px) {
   :root {
-    --fs-72-32: 3rem;
-    --fs-48-24: 2.25rem;
-    --fs-36-24: 2rem;
-    --fs-32-24: 1.875rem;
     --header-grid-height: 43px;
     --container-padding: 40px;
     --header-padding: 30px;
@@ -94,12 +57,6 @@
 }
 @media (max-width: 1279px) and (min-width: 0px) {
   :root {
-    --fs-72-32: 2.625rem;
-    --fs-36-24: 1.5rem;
-    --fs-32-24: 1.5rem;
-    --fs-24-18: 1.375rem;
-    --fs-16-14: 0.875rem;
-    --fs-14-12: 0.75rem;
     --container-padding: 30px;
     --about-figure-icon-size: 148px;
     --video-preview-size: 133px;
@@ -107,18 +64,6 @@
 }
 @media (max-width: 1023px) and (min-width: 0px) {
   :root {
-    --fs-72-32: 2.25rem;
-    --fs-48-24: 2rem;
-    --fs-24-18: 1.125rem;
-    --fs-24-lg-16: 1rem;
-    --fs-18-16: 1rem;
-    --fs-18-14: 0.875rem;
-    --size-60-50: 50px;
-    --size-60-40: 40px;
-    --size-50-40: 40px;
-    --size-50-30: 30px;
-    --size-40-30: 30px;
-    --size-30-25: 25px;
     --container-padding: 40px;
     --header-padding: 40px;
     --about-figure-icon-size: 81px;
@@ -126,30 +71,11 @@
 }
 @media (max-width: 766px) and (min-width: 0px) {
   :root {
-    --fs-72-32: 2rem;
-    --fs-72-24: 1.5rem;
-    --fs-48-24: 1.5rem;
-    --fs-48-sm-18: 1.125rem;
-    --fs-36-sm-18: 1.125rem;
-    --fs-32-sm-18: 1.125rem;
-    --fs-32-sm-16: 1rem;
-    --fs-24-sm-16: 1rem;
-    --fs-16-sm-12: 0.75rem;
-    --fs-16-sm-10: 0.625rem;
-    --fs-14-sm-10: 0.625rem;
     --container-padding: 20px;
     --header-grid-height: 41px;
     --header-padding: 20px;
     --about-figure-icon-size: 87px;
     --video-preview-size: 131px;
-  }
-}
-@media (max-width: 360px) and (min-width: 0px) {
-  :root {
-    --fs-48-xs-18: 1.125rem;
-    --fs-16-xs-12: 0.75rem;
-    --fs-16-xs-10: 0.625rem;
-    --fs-14-xs-10: 0.625rem;
   }
 }
 @keyframes modalAnimation {
@@ -795,6 +721,23 @@ footer {
     padding: 18px 50px;
   }
 }
+.form__success {
+  position: absolute;
+  top: 40px;
+  left: 50%;
+  display: none;
+  padding: 20px 30px;
+  border-radius: 30px;
+  background: #84f1d4;
+  font-size: 14px;
+  line-height: 100%;
+  text-transform: uppercase;
+  transform: translateX(-50%);
+  z-index: 5;
+}
+.form__success.show {
+  display: block;
+}
 
 .preview-video {
   display: flex;
@@ -854,7 +797,17 @@ footer {
   padding: 50px;
   z-index: 1;
 }
-.preview-video__button-wrap > img {
+@media (max-width: 1769px) and (min-width: 0px) {
+  .preview-video__button-wrap {
+    padding: 38px;
+  }
+}
+@media (max-width: 1279px) and (min-width: 0px) {
+  .preview-video__button-wrap {
+    padding: 27px;
+  }
+}
+.preview-video__preview {
   position: absolute;
   top: 0;
   left: 0;
@@ -864,7 +817,8 @@ footer {
   pointer-events: none;
   z-index: -1;
 }
-.preview-video__button-wrap > button {
+.preview-video__button {
+  position: relative;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -877,8 +831,11 @@ footer {
   text-transform: uppercase;
   border: 1px solid #fff;
   border-radius: 100%;
+  transform: translate(0, 0);
+  transition: all 0.2s ease-out;
+  z-index: 1;
 }
-.preview-video__button-wrap > button::before {
+.preview-video__button::before {
   content: "";
   display: block;
   width: 13px;
@@ -887,32 +844,44 @@ footer {
   background-size: contain;
   background-position: center;
 }
+.preview-video__button::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  display: block;
+  width: 5%;
+  height: 5%;
+  background: #000;
+  border-radius: 100%;
+  transform: translate(-50%, -50%);
+  transition: all 0.6s ease-in-out;
+  pointer-events: none;
+  opacity: 0.3;
+  z-index: -1;
+}
+@media (hover: hover) {
+  .preview-video__button:hover::after {
+    width: 60%;
+    height: 60%;
+  }
+}
 @media (max-width: 1769px) and (min-width: 0px) {
-  .preview-video__button-wrap > button {
+  .preview-video__button {
     font-size: 14px;
   }
-  .preview-video__button-wrap > button::before {
+  .preview-video__button::before {
     width: 10px;
     height: 11px;
   }
 }
 @media (max-width: 1279px) and (min-width: 0px) {
-  .preview-video__button-wrap > button {
+  .preview-video__button {
     font-size: 10px;
   }
-  .preview-video__button-wrap > button::before {
+  .preview-video__button::before {
     width: 7px;
     height: 8px;
-  }
-}
-@media (max-width: 1769px) and (min-width: 0px) {
-  .preview-video__button-wrap {
-    padding: 38px;
-  }
-}
-@media (max-width: 1279px) and (min-width: 0px) {
-  .preview-video__button-wrap {
-    padding: 27px;
   }
 }
 .preview-video__player {
@@ -1161,7 +1130,7 @@ footer {
 }
 @media screen and (max-width: 1023px) and (min-width: 0px) and (orientation: portrait) {
   .main-hero {
-    height: calc(100lvh - var(--header-height));
+    height: calc(100dvh - var(--header-height));
   }
 }
 @media (max-width: 766px) and (min-width: 0px) {
@@ -1323,7 +1292,7 @@ footer {
 .about-project__content {
   display: flex;
   flex-direction: column;
-  justify-content: end;
+  justify-content: flex-end;
   max-width: 587px;
   margin-top: 110px;
 }
@@ -1462,11 +1431,5 @@ footer {
     grid-template-columns: 1fr;
     gap: 56px;
     margin-top: 55px;
-  }
-}
-
-@media (max-width: 1024px) and (min-width: 0px) {
-  .open-menu {
-    padding-right: 0px;
   }
 }
